Comprehensive benchmark results with OpenVINO vs ONNX Runtime
- Added comprehensive benchmark results from both small and large models
- Updated BENCHMARK_COMPARISON_RESULTS.md with complete performance analysis
- Updated README.md with new findings showing OpenVINO outperforms ONNX Runtime
- Fixed ONNX export script path resolution and dependencies
- Enhanced installation script with better error handling
- Added requirements-essential.txt for core packages
- Added verification script for package installation checking
- Excluded model directories from git tracking

Key findings:
 OpenVINO consistently outperforms ONNX Runtime by 5-16%
 Better throughput and lower latency across all test scenarios
 Intel NPU provides excellent acceleration for all frameworks

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ env.bak/
 venv.bak/
 .venv/
 .env
+.venv_intel_npu_benchmark/
 
 # IDE
 .vscode/
@@ -61,6 +62,11 @@ Thumbs.db
 # *.bin
 # *.xml
 # *.safetensors
+
+# Exclude specific model directories and files
+proxy_models_for_intel/proxy_models_for_intel.zip
+proxy_models_for_intel/test_bigger_model/
+proxy_models_for_intel/test_smaller_model/
 
 # Results (uncomment if you don't want to include results)
 # *_results_*.json
